# simple-memo

./: .gitignore  README.md  pyproject.toml
src/simple_memo/: __init__.py  cli.py  colors.py  convert.py  notes.py  osascript.py  reminders.py
