[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple-memo"
version = "0.1.0"
description = "A simple, MIT-licensed CLI for Apple Notes & Reminders on macOS"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Nenad Nikolin" }]
keywords = ["apple-notes", "reminders", "macos", "cli", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "mistune>=3.0",
    "html2text>=2024.2.26",
]

[project.scripts]
simple-memo = "simple_memo.cli:main"

[project.urls]
Homepage = "https://github.com/inkolin/simple-memo"
Repository = "https://github.com/inkolin/simple-memo"
Issues = "https://github.com/inkolin/simple-memo/issues"
